--- a/mean/src/index.html
+++ b/mean/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>E-San Travel</title>
+    <title>Theiyw-Nai</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
